feat: add GET /tournaments + reorganized server folder
