# server/server.pb.go
@@ -167,34 +167,35 @@ func init() {
 func init() { proto.RegisterFile("server/server.proto", fileDescriptor_fde5b5d7aefe7c04) }
 
 var fileDescriptor_fde5b5d7aefe7c04 = []byte{
-	// 422 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0xcd, 0x8e, 0xd3, 0x30,
-	0x14, 0x85, 0x9b, 0xa1, 0x53, 0xc0, 0x10, 0x60, 0x3c, 0x83, 0x28, 0x01, 0x05, 0xf0, 0x0a, 0x0d,
-	0x4a, 0x2c, 0xc1, 0x8e, 0xdd, 0xa0, 0x11, 0x68, 0xc4, 0x02, 0x44, 0x05, 0x48, 0x6c, 0x90, 0xdb,
-	0xdc, 0xa6, 0x51, 0x1b, 0xdb, 0xf8, 0xa7, 0x15, 0x5b, 0x9e, 0x00, 0x89, 0x27, 0x62, 0xc7, 0xb2,
-	0x12, 0x1b, 0x96, 0xa8, 0xe5, 0x41, 0x90, 0xed, 0xb4, 0x0a, 0xff, 0x62, 0xe5, 0x9c, 0x73, 0xef,
-	0xfd, 0x72, 0x72, 0x63, 0xb4, 0xaf, 0x41, 0xcd, 0x41, 0xd1, 0x70, 0xe4, 0x52, 0x09, 0x23, 0xf0,
-	0x05, 0xc9, 0xcc, 0x64, 0xc1, 0x54, 0x1e, 0xdc, 0xe4, 0x7a, 0x29, 0x44, 0x39, 0x03, 0xca, 0x64,
-	0x45, 0x19, 0xe7, 0xc2, 0x30, 0x53, 0x09, 0xae, 0x43, 0x77, 0xb2, 0x0f, 0xdc, 0x54, 0xe6, 0x2d,
-	0x0d, 0x47, 0x63, 0x66, 0x65, 0x65, 0x26, 0x76, 0x98, 0x8f, 0x44, 0x4d, 0x4b, 0x51, 0x0a, 0xea,
-	0xed, 0xa1, 0x1d, 0x7b, 0xe5, 0x85, 0x7f, 0x0a, 0xed, 0xa4, 0x87, 0xba, 0x2f, 0x44, 0x55, 0x90,
-	0xc7, 0x68, 0xef, 0xc8, 0x9a, 0x89, 0x43, 0x8d, 0x98, 0x81, 0x13, 0x2e, 0xad, 0xc1, 0x09, 0x3a,
-	0x63, 0x35, 0x28, 0xce, 0x6a, 0xe8, 0x47, 0x37, 0xa3, 0xdb, 0x67, 0x9f, 0x6d, 0xb5, 0xab, 0x49,
-	0xa6, 0xf5, 0x42, 0xa8, 0xa2, 0xbf, 0x13, 0x6a, 0x1b, 0x4d, 0x0e, 0x11, 0x6e, 0xc3, 0x9e, 0x58,
-	0xe3, 0x68, 0x07, 0x68, 0xd7, 0x88, 0x29, 0xf0, 0x06, 0x15, 0xc4, 0xdd, 0x8f, 0xa7, 0x50, 0x6f,
-	0xe0, 0xbf, 0x16, 0x0b, 0x74, 0xbe, 0x3d, 0x86, 0x6f, 0xe5, 0x3f, 0xae, 0x23, 0xff, 0x25, 0x61,
-	0x42, 0xfe, 0xd6, 0x12, 0xde, 0x4b, 0xfa, 0xef, 0x3e, 0x7f, 0xfb, 0xb0, 0x83, 0x49, 0x4c, 0x59,
-	0xab, 0x78, 0x3f, 0x3a, 0xc4, 0x47, 0xa8, 0xfb, 0xb4, 0xe2, 0x25, 0x3e, 0xf8, 0x99, 0xe2, 0x56,
-	0x92, 0xfc, 0xd6, 0x25, 0xb1, 0xa7, 0x9d, 0xc6, 0xbb, 0x54, 0xba, 0xd1, 0x97, 0xe8, 0xdc, 0x73,
-	0x0d, 0x6a, 0x00, 0x5a, 0x57, 0x82, 0xff, 0x81, 0x74, 0x6d, 0xeb, 0x36, 0xbf, 0xaa, 0x35, 0x42,
-	0x2e, 0x7b, 0xe0, 0x45, 0x1c, 0x53, 0xb7, 0xdb, 0x4c, 0x37, 0xa4, 0xd7, 0xe8, 0xd2, 0x23, 0xe0,
-	0xa0, 0x98, 0x81, 0x87, 0x6c, 0x0a, 0xc7, 0xcc, 0xb0, 0xff, 0xca, 0x79, 0xc3, 0x63, 0xaf, 0x92,
-	0x2b, 0xb4, 0x80, 0x39, 0x2d, 0x1b, 0x54, 0x36, 0x66, 0x53, 0xc8, 0x0a, 0x07, 0x3b, 0x41, 0xdd,
-	0x63, 0x5b, 0xcb, 0x7f, 0x42, 0x9b, 0xc8, 0xae, 0x77, 0x93, 0x95, 0xc4, 0x1e, 0xaa, 0xdf, 0xcc,
-	0xb2, 0xc2, 0xd6, 0xf2, 0xc1, 0x9d, 0x4f, 0xab, 0x34, 0x5a, 0xae, 0xd2, 0xe8, 0xeb, 0x2a, 0x8d,
-	0xde, 0xaf, 0xd3, 0xce, 0x72, 0x9d, 0x76, 0xbe, 0xac, 0xd3, 0xce, 0xab, 0xbd, 0x0d, 0x45, 0x2e,
-	0x9a, 0x9b, 0x3e, 0xec, 0xf9, 0x8b, 0x77, 0xef, 0x7b, 0x00, 0x00, 0x00, 0xff, 0xff, 0x39, 0x0c,
-	0xf8, 0x19, 0x01, 0x03, 0x00, 0x00,
+	// 445 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x93, 0x4f, 0x6f, 0xd3, 0x30,
+	0x18, 0xc6, 0x9b, 0xa9, 0x2b, 0xe0, 0xad, 0x83, 0x79, 0x45, 0x94, 0x80, 0x02, 0xf8, 0x84, 0x86,
+	0x12, 0x4b, 0x70, 0xe3, 0x36, 0x34, 0x81, 0x26, 0x0e, 0x20, 0x06, 0x43, 0xe2, 0x82, 0xdc, 0xe5,
+	0x5d, 0x1a, 0x75, 0xb1, 0x4d, 0xfc, 0x7a, 0x15, 0x57, 0x3e, 0x01, 0x12, 0x27, 0xbe, 0x11, 0xc7,
+	0x49, 0x5c, 0x38, 0xa2, 0x96, 0x0f, 0x82, 0x6c, 0xa7, 0x55, 0xf8, 0xcf, 0x4e, 0xce, 0xf3, 0xbc,
+	0xef, 0xfb, 0x8b, 0xfd, 0x24, 0x26, 0x5b, 0x06, 0xea, 0x13, 0xa8, 0x79, 0x58, 0x32, 0x5d, 0x2b,
+	0x54, 0x74, 0x43, 0x0b, 0x1c, 0x4f, 0x45, 0x9d, 0x05, 0x37, 0xbe, 0x5e, 0x28, 0x55, 0x1c, 0x03,
+	0x17, 0xba, 0xe4, 0x42, 0x4a, 0x85, 0x02, 0x4b, 0x25, 0x4d, 0xe8, 0x8e, 0xb7, 0x40, 0x62, 0x89,
+	0x6f, 0x79, 0x58, 0x1a, 0x33, 0x2d, 0x4a, 0x1c, 0xdb, 0x51, 0x76, 0xa8, 0x2a, 0x5e, 0xa8, 0x42,
+	0x71, 0x6f, 0x8f, 0xec, 0x91, 0x57, 0x5e, 0xf8, 0xa7, 0xd0, 0xce, 0x7a, 0xa4, 0x7b, 0xa0, 0xca,
+	0x9c, 0x3d, 0x26, 0x9b, 0x3b, 0x16, 0xc7, 0x0e, 0x75, 0x28, 0x10, 0xf6, 0xa4, 0xb6, 0x48, 0x63,
+	0x72, 0xde, 0x1a, 0xa8, 0xa5, 0xa8, 0x60, 0x18, 0xdd, 0x8c, 0x6e, 0x5f, 0x78, 0xb6, 0xd4, 0xae,
+	0xa6, 0x85, 0x31, 0x53, 0x55, 0xe7, 0xc3, 0x95, 0x50, 0x5b, 0x68, 0xb6, 0x4d, 0x68, 0x1b, 0xf6,
+	0xc4, 0xa2, 0xa3, 0x0d, 0xc8, 0x2a, 0xaa, 0x09, 0xc8, 0x06, 0x15, 0xc4, 0xdd, 0x8f, 0x5d, 0xd2,
+	0xdb, 0xf7, 0xa7, 0xa5, 0x8a, 0xac, 0xb7, 0xc7, 0xe8, 0xad, 0xec, 0xc7, 0x38, 0xb2, 0x5f, 0x76,
+	0x18, 0xb3, 0xbf, 0xb5, 0x84, 0xf7, 0xb2, 0xe1, 0xbb, 0xcf, 0xdf, 0x3e, 0xac, 0x50, 0xd6, 0xe7,
+	0xa2, 0x55, 0xbc, 0x1f, 0x6d, 0xd3, 0x1d, 0xd2, 0x7d, 0x5a, 0xca, 0x82, 0x0e, 0x7e, 0xa6, 0xb8,
+	0x48, 0xe2, 0xdf, 0xba, 0xac, 0xef, 0x69, 0xe7, 0xe8, 0x2a, 0xd7, 0x6e, 0xf4, 0x25, 0x59, 0x7b,
+	0x61, 0xa0, 0xde, 0x07, 0x63, 0x4a, 0x25, 0xff, 0x40, 0xba, 0xb6, 0x74, 0x9b, 0x4f, 0xd5, 0x1a,
+	0x61, 0x97, 0x3d, 0xf0, 0x22, 0xed, 0x73, 0x97, 0x6d, 0x6a, 0x1a, 0xd2, 0x01, 0x59, 0x7b, 0xae,
+	0xac, 0xcf, 0x5a, 0xa2, 0xf9, 0x5f, 0x70, 0x6b, 0x84, 0x0d, 0x3c, 0x78, 0x83, 0xae, 0x73, 0x6c,
+	0x81, 0x5e, 0x93, 0x4b, 0x8f, 0x40, 0x42, 0x2d, 0x10, 0x1e, 0x8a, 0x09, 0xec, 0x0a, 0x14, 0x67,
+	0x3a, 0xff, 0x0d, 0x4f, 0xbd, 0xca, 0xae, 0xf0, 0x1c, 0x4e, 0x78, 0xd1, 0xa0, 0xd2, 0x23, 0x31,
+	0x81, 0x34, 0x77, 0xb0, 0x3d, 0xd2, 0xdd, 0xb5, 0x95, 0xfe, 0x27, 0xb4, 0xd9, 0xb1, 0xeb, 0x5d,
+	0x64, 0xc0, 0xfa, 0x1e, 0x6a, 0xde, 0x1c, 0xa7, 0xb9, 0xad, 0xf4, 0x83, 0x3b, 0x9f, 0x66, 0x49,
+	0x74, 0x3a, 0x4b, 0xa2, 0xaf, 0xb3, 0x24, 0x7a, 0x3f, 0x4f, 0x3a, 0xa7, 0xf3, 0xa4, 0xf3, 0x65,
+	0x9e, 0x74, 0x5e, 0x6d, 0x2e, 0x28, 0x7a, 0xda, 0xdc, 0xa0, 0x51, 0xcf, 0xff, 0xd0, 0xf7, 0xbe,
+	0x07, 0x00, 0x00, 0xff, 0xff, 0x60, 0x19, 0xc7, 0x04, 0x59, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -209,9 +210,14 @@ const _ = grpc.SupportPackageIsVersion4
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type ServerClient interface {
+	// Create a session based on credentials
 	Authenticate(ctx context.Context, in *AuthenticateInput, opts ...grpc.CallOption) (*AuthenticateOutput, error)
+	// Verify the service is up and running
 	Ping(ctx context.Context, in *Void, opts ...grpc.CallOption) (*Void, error)
+	// Get current user's session
 	UserSession(ctx context.Context, in *Void, opts ...grpc.CallOption) (*entity.UserSession, error)
+	// List tournaments
+	Tournaments(ctx context.Context, in *Void, opts ...grpc.CallOption) (*entity.Tournaments, error)
 	GenerateFakeData(ctx context.Context, in *Void, opts ...grpc.CallOption) (*Void, error)
 	Dump(ctx context.Context, in *Void, opts ...grpc.CallOption) (*entity.Dump, error)
 }
@@ -251,6 +257,15 @@ func (c *serverClient) UserSession(ctx context.Context, in *Void, opts ...grpc.C
 	return out, nil
 }
 
+func (c *serverClient) Tournaments(ctx context.Context, in *Void, opts ...grpc.CallOption) (*entity.Tournaments, error) {
+	out := new(entity.Tournaments)
+	err := c.cc.Invoke(ctx, "/pathwar.server.Server/Tournaments", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *serverClient) GenerateFakeData(ctx context.Context, in *Void, opts ...grpc.CallOption) (*Void, error) {
 	out := new(Void)
 	err := c.cc.Invoke(ctx, "/pathwar.server.Server/GenerateFakeData", in, out, opts...)
@@ -271,9 +286,14 @@ func (c *serverClient) Dump(ctx context.Context, in *Void, opts ...grpc.CallOpti
 
 // ServerServer is the server API for Server service.
 type ServerServer interface {
+	// Create a session based on credentials
 	Authenticate(context.Context, *AuthenticateInput) (*AuthenticateOutput, error)
+	// Verify the service is up and running
 	Ping(context.Context, *Void) (*Void, error)
+	// Get current user's session
 	UserSession(context.Context, *Void) (*entity.UserSession, error)
+	// List tournaments
+	Tournaments(context.Context, *Void) (*entity.Tournaments, error)
 	GenerateFakeData(context.Context, *Void) (*Void, error)
 	Dump(context.Context, *Void) (*entity.Dump, error)
 }
@@ -336,6 +356,24 @@ func _Server_UserSession_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Server_Tournaments_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Void)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServerServer).Tournaments(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/pathwar.server.Server/Tournaments",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServerServer).Tournaments(ctx, req.(*Void))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Server_GenerateFakeData_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(Void)
 	if err := dec(in); err != nil {
@@ -387,6 +425,10 @@ var _Server_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "UserSession",
 			Handler:    _Server_UserSession_Handler,
+		},
+		{
+			MethodName: "Tournaments",
+			Handler:    _Server_Tournaments_Handler,
 		},
 		{
 			MethodName: "GenerateFakeData",
